--- a/terms.html
+++ b/terms.html
@@ -82,17 +82,89 @@
         <!-- Navbar & Hero End -->
 
 
-        <!-- Team Start -->
+        <!-- Terms Start -->
         <div class="container-xxl pt-5 pb-3">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="mb-5">Terms and Conditions.</h1>
                 </div>
                 <div class="row g-4">
+                    <h4>1. Introduction</h4>
+                    <p>Welcome to our MamaBobo Restaurant in Belfast, Northern Ireland. By accessing and using our services, you agree to be bound by the following terms and conditions. Please read them carefully.</p>
+                    <br>
+                    <h4>2. Reservations</h4>
+                    <ul>
+                        <li><span class="fw-bold">Booking:</span> Reservations can be made via phone, our website, or social media platforms.</li>
+                        <li><span class="fw-bold">Confirmation:</span> A reservation is only confirmed once you receive a confirmation message from us.</li>
+                        <li><span class="fw-bold">Cancellation:</span> Please notify us of any cancellations at least 24 hours in advance. Failure to do so may result in a cancellation fee.</li>
+                    </ul>
+                    <br>
+                    <h4>3. Ordering and Payment</h4>
+                    <ul>
+                        <li><span class="fw-bold">Menu and Prices:</span> All menu items and prices are subject to change without notice. Prices are inclusive of applicable taxes unless otherwise stated.</li>
+                        <li><span class="fw-bold">Payment Methods:</span> We accept cash, debit/credit cards, and contactless payments. For online orders, various digital wallets and payment platforms are also accepted.</li>
+                        <li><span class="fw-bold">Refunds:</span> Refunds are provided at the discretion of the management and are evaluated on a case-by-case basis.</li>
+                    </ul>
+                    <br>
+                    <h4>4. Delivery and Takeaway</h4>
+                    <ul>
+                        <li><span class="fw-bold">Delivery Area:</span> Our delivery service is available within a specific radius from our restaurant. Please check our website or contact us to confirm if we deliver to your area.</li>
+                        <li><span class="fw-bold">Delivery Time:</span> We strive to deliver your order within the estimated time. However, delays may occur due to traffic, weather, or other unforeseen circumstances.</li>
+                        <li><span class="fw-bold">Takeaway:</span> Orders for takeaway can be placed via phone, our website, or in person. Please provide a valid contact number for order confirmation.</li>
+                    </ul>
+                    <br>
+                    <h4>5. Catering Services</h4>
+                    <ul>
+                        <li><span class="fw-bold">Bookings:</span> Catering services for events and private parties must be booked in advance. Please contact us to discuss your requirements.</li>
+                        <li><span class="fw-bold">Deposit:</span> A deposit may be required to secure your booking. This deposit is non-refundable if the event is canceled less than 7 days before the scheduled date.</li>
+                        <li><span class="fw-bold">Menu Selection:</span> Final menu selection must be confirmed at least 7 days prior to the event.</li>
+                    </ul>
+                    <br>
+                    <h4>6. Allergies and Dietary Requirements</h4>
+                    <ul>
+                        <li><span class="fw-bold">Allergy Information:</span> Please inform us of any allergies or dietary restrictions when placing your order. While we take precautions to avoid cross-contamination, we cannot guarantee a completely allergen-free environment.</li>
+                        <li><span class="fw-bold">Special Requests:</span> We will do our best to accommodate special dietary requests. However, some requests may not be feasible due to ingredient availability or preparation methods.</li>
+                    </ul>
+                    <br>
+                    <h4>7. Restaurant Policies</h4>
+                    <ul>
+                        <li><span class="fw-bold">Dress Code:</span> Our dress code is casual to ensure all guests feel comfortable.</li>
+                        <li><span class="fw-bold">Conduct:</span> We reserve the right to refuse service to anyone exhibiting inappropriate or disruptive behavior.</li>
+                        <li><span class="fw-bold">Damage:</span> Guests will be held responsible for any damage caused to the restaurant’s property.</li>
+                    </ul>
+                    <br>
+                    <h4>8. Privacy Policy</h4>
+                    <ul>
+                        <li class="fw-bold"> We collect and store personal information for reservation, ordering, and marketing purposes. This information is kept confidential and is not shared with third parties without your consent.</li>
+                        <li class="fw-bold"> By providing your contact information, you agree to receive marketing communications from us. You can opt out at any time by following the unsubscribe instructions in the communication.</li>
+                    </ul>
+                    <br>
+                    <h4>9. Liability</h4>
+                    <ul>
+                        <li><span class="fw-bold">Health and Safety:</span> We adhere to health and safety regulations to ensure the well-being of our guests. However, we are not liable for any allergic reactions or foodborne illnesses.</li>
+                        <li><span class="fw-bold">Loss or Damage:</span> We are not responsible for any loss or damage to personal belongings while on our premises.</li>
+                    </ul>
+                    <br>
+                    <h4>10. Amendments</h4>
+                    <p>We reserve the right to amend these terms and conditions at any time. Any changes will be effective immediately upon being posted on our website. Your continued use of our services constitutes your acceptance of the updated terms and conditions.</p>
+                    <br>
+                    <h4>11. Contact Information</h4>
+                    <p class="fw-bold">If you have any questions or concerns about these terms and conditions, please contact us at:
+                        <br>
+                        <br>
+                        MamaBobo Restaurant
+                        <br>
+                        407 Ormeau Road BT7 3GP
+                        <br>
+                        +44 743 641 8993
+                        <br>
+                        info@mamaboborestaurant.co.uk
+                    </p>
+                    <p>Thank you for choosing our MamaBobo Restaurant. We look forward to serving you!</p>
                 </div>
             </div>
         </div>
-        <!-- Team End -->
+        <!-- Terms End -->
         
 
         <!-- Footer Start -->
@@ -100,34 +172,33 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Reservation</a>
-                        <a class="btn btn-link" href="">Privacy Policy</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
+                        <h5 class="section-title ff-secondary text-start primary_orange fw-normal mb-4"><span class="primary_green">MamaBobo</span> Restaurant</h5>
+                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <a class="btn btn-link" href="contact.html">Contact Us</a>
+                        <a class="btn btn-link" href="faq.html">Frequently Asked Questions</a>
+                        <a class="btn btn-link" href="privacy_policy.html">Privacy Policy</a>
+                        <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h5>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>407 Ormeau Road, BT7 3GP</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+44 743 641 8993</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i><small>info@mamaboborestaurant.co.uk</small></p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@mamaboboafrica"><i class="fab fa-tiktok" style="color: white;"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/mamaboboafrica/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/mamaboboafrica/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
-                        <h5 class="text-light fw-normal">Monday - Saturday</h5>
-                        <p>09AM - 09PM</p>
-                        <h5 class="text-light fw-normal">Sunday</h5>
-                        <p>10AM - 08PM</p>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h5>
+                        <h5 class="text-light fw-normal">Tuesday - Sunday</h5>
+                        <p>12PM - 9PM</p>
+                        <h5 class="text-light fw-normal">Monday</h5>
+                        <p><i>closed</i></p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h4>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h5>
                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
@@ -140,18 +211,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
+                            &copy; <span>MamaBobo Restaurant</span>, All Right Reserved.
+							Developed By <a class="border-bottom" href="https://hunkutech.com"><i>HUNKUTECH</i></a>
                         </div>
                     </div>
                 </div>
