--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -104,7 +104,9 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+44 743 641 8993</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i><small>info@mamaboborestaurant.co.uk</small></p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@mamaboboafrica"><i class="fab fa-tiktok" style="color: white;"></i></a>
+                            <a class="btn btn-outline-light btn-social svg_icon" href="https://www.tiktok.com/@mamaboboafrica"><svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
+                                <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/>
+                              </svg></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/mamaboboafrica/"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/mamaboboafrica/"><i class="fab fa-instagram"></i></a>
                         </div>
