--- a/contact.html
+++ b/contact.html
@@ -56,15 +56,23 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                         <a href="services.html" class="nav-item nav-link">Services</a>
-                        <a href="menu.html" class="nav-item nav-link">Menu</a>
+                        <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
                         <a href="booking.html" class="nav-item nav-link">Booking</a>
-                        <a href="#" class="nav-item nav-link">Order</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
+                            <div class="dropdown-menu m-0">
+                                <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" class="dropdown-item">OrderYOYO</a>
+                                <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" class="dropdown-item">UberEats</a>
+                                <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" class="dropdown-item">JustEats</a>
+                            </div>
+                        </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="#booking" class="btn btn-primary py-2 px-4">Book A Table</a>
                 </div>
+            </nav>
             </nav>
 
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
@@ -94,7 +102,7 @@
                         <div class="row gy-4">
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Address</h5>
-                                <p><i class="fa-solid fa-map-location-dot text-primary me-2"></i>407 Ormeau Road, BT7 3GP</p>
+                                <p><i class="fa fa-map-pin text-primary me-2"></i>407 Ormeau Road, BT7 3GP</p>
                             </div>
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Email</h5>
@@ -107,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2312.5380931548452!2d-5.920948124466933!3d54.576892081945886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486109385e1f4587%3A0xfec8f91c594382bb!2sMama%20Bobo%20Restaurant!5e0!3m2!1sen!2suk!4v1716944949710!5m2!1sen!2suk" style="min-height: 350px; border:0;" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2312.5380931548452!2d-5.920948124466933!3d54.576892081945886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486109385e1f4587%3A0xfec8f91c594382bb!2sMama%20Bobo%20Restaurant!5e0!3m2!1sen!2suk!4v1716944949710!5m2!1sen!2suk" class="map_card" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
@@ -177,17 +185,18 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h5>
-                        <h5 class="text-light fw-normal">Tuesday - Sunday</h5>
-                        <p>12PM - 9PM</p>
-                        <h5 class="text-light fw-normal">Monday</h5>
-                        <p><i>closed</i></p>
+                        <p class="text-light fw-normal">Monday - <i>closed</i></p>
+                        <p class="text-light fw-normal">Tuesday - Friday</p>
+                        <p class="text-light fw-normal"><i>5pm - 9pm</i></p>
+                        <p class="text-light fw-normal">Saturday - <i>3pm - 9pm</i></p>
+                        <p class="text-light fw-normal">Sunday - <i>12pm - 6pm</i></p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h5>
-                        <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Offers & Rewards</h5>
+                        <p>Sign up for amazing offers, coupons and rewards.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">claim</button>
                         </div>
                     </div>
                 </div>
