--- a/layout.html
+++ b/layout.html
@@ -259,7 +259,7 @@
         <div class="flex flex-wrap justify-between items-center gap-3">
           <!-- Social Brands -->
           <div class="space-x-4">
-            <p class="font-figtree text-sm inline-flex gap-x-2 text-lotion_white focus:outline-none focus:text-gray-800 dark:text-neutral-400 dark:hover:text-neutral-200 dark:focus:text-neutral-200" href="#">DEVELOPED BY <a href="www.hunkutech.com" class="text-bluey font-bold font-figtree">Joshua Hunkuten</a>.</p>
+            <p class="font-figtree text-sm inline-flex gap-x-2 text-lotion_white focus:outline-none focus:text-gray-800 dark:text-neutral-400 dark:hover:text-neutral-200 dark:focus:text-neutral-200" href="#">DEVELOPED BY <a href="https://hunkutech.com" class="text-bluey font-bold font-figtree">Joshua Hunkuten</a>.</p>
           </div>
           <!-- End Social Brands -->
         </div>
