--- a/index.html
+++ b/index.html
@@ -243,12 +243,8 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <select class="form-select" id="select1">
-                                          <option value="1">People 1</option>
-                                          <option value="2">People 2</option>
-                                          <option value="3">People 3</option>
-                                        </select>
-                                        <label for="select1">No Of People</label>
+                                        <input type="text" class="form-control" id="noofpeople" placeholder="No Of People">
+                                        <label for="noofpeople">No Of People</label>
                                       </div>
                                 </div>
                                 <div class="col-12">
