--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
                     <div class="col-lg-3 col-md-6">
                         <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-2">Opening</h5>
                         <p class="text-light fw-normal">Monday - <i>closed</i></p>
-                        <p class="text-light fw-normal">Tuesday - Friday</p>
+                        <p class="text-light fw-normal">Tuesday - Thursday</p>
                         <p class="text-light fw-normal"><i>5pm - 9pm</i></p>
-                        <p class="text-light fw-normal">Saturday - <i>3pm - 9pm</i></p>
-                        <p class="text-light fw-normal">Sunday - <i>12pm - 6pm</i></p>
+                        <p class="text-light fw-normal">Friday - Sunday</p>
+                        <p class="text-light fw-normal"><i>12pm - 9pm</i></p>
                         
                     </div>
                     <div class="col-lg-3 col-md-6">
