--- a/faq.html
+++ b/faq.html
@@ -117,7 +117,7 @@
                     </button>
                   </h2>
                   <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">We are open Tuesday to Sunday from 12:00 PM to 9:00 PM, We are closed on Mondays.</div>
+                    <div class="accordion-body">We are open Tuesday to Thursday from 5:00:00 PM to 9:00:00 pm, and Friday to Sunday from 12:00 PM to 9:00 PM, We are closed on Mondays.</div>
                   </div>
                 </div>
                 <div class="accordion-item">
