--- a/faq.html
+++ b/faq.html
@@ -58,8 +58,8 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                     <a href="services.html" class="nav-item nav-link">Services</a>
-                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
-                    <a href="booking.html" class="nav-item nav-link">Booking</a>
+                    <a href="menu.html" class="nav-item nav-link">Menu</a>
+                    <!-- <a href="booking.html" class="nav-item nav-link">Booking</a> -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
                         <div class="dropdown-menu m-0">
@@ -70,7 +70,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
-                <a href="#booking" class="btn btn-primary py-2 px-4">Book A Table</a>
+                <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
             </div>
         </nav>
 
