--- a/services.html
+++ b/services.html
@@ -58,8 +58,8 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                         <a href="services.html" class="nav-item nav-link">Services</a>
-                        <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
-                        <a href="booking.html" class="nav-item nav-link">Booking</a>
+                        <a href="menu.html" class="nav-item nav-link">Menu</a>
+                        <!-- <a href="booking.html" class="nav-item nav-link">Booking</a> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Order</a>
                             <div class="dropdown-menu m-0">
@@ -70,7 +70,7 @@
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="#booking" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="booking.html" class="btn btn-primary py-2 px-4">Book A Table</a>
                 </div>
             </nav>
 
@@ -111,7 +111,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-truck text-primary mb-4"></i>
                                 <h5>Delivery</h5>
-                                <p class="service_paragraph">Savor the flavors of Nigerian Cuisines from the comfort of your own home with MamaBobo’s delivery service. We’ve partnered with <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" style="text-decoration: none;"><i>OrderYOYO</i></a>, <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" style="text-decoration: none;"><i>Just Eats</i></a> and <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" style="text-decoration: none;"><i>UberEats</i></a> to bring you your favourite dishes quickly and conveniently. Whether you're looking for a comforting meal at home or planning a feast with friends, our delivery service ensures that every order is packed with care and delivered right to your door. Explore our menu on <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" style="text-decoration: none;"><i>OrderYOYO</i></a>, <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" style="text-decoration: none;"><i>Just Eats</i></a> and <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" style="text-decoration: none;"><i>UberEats</i></a> and enjoy a taste of Nigeria anytime, anywhere.</p>
+                                <p class="service_paragraph">Savor the flavors of Nigerian Cuisines from the comfort of your own home with MamaBobo’s delivery service. We’ve partnered with <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" style="text-decoration: none;"><i>OrderYOYO</i></a>, <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" style="text-decoration: none;"><i>Just Eats</i></a> and <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" style="text-decoration: none;"><i>UberEats</i></a> to bring you your favourite dishes quickly and conveniently. Whether you're looking for a comforting meal at home or planning a feast with friends, our delivery service ensures that every order is packed with care and delivered right to your door.</p>
                             </div>
                         </div>
                     </div>
