--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- Menu Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <div class="text-center wow fadeInUp mb-4" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>
                     <!-- <h1 class="mb-5">Most Popular Items</h1> -->
                 </div>
