--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
                                 <h5>Dine In</h5>
-                                <p class="service_paragraph">Step into MamaBobo Restaurant  and immerse yourself in a truly Nigerian dining experience. Our welcoming atmosphere is perfect for family meals, friendly gatherings, or a romantic dinner. Enjoy the rich tapestry of flavors that our authentic dishes offer, all served in a vibrant setting inspired by the beauty and culture of Nigeria. Whether it’s a casual lunch or a special dinner, dining with us is always an occasion to remember.</p>
+                                <p class="service_paragraph">Step into MamaBobo Restaurant and immerse yourself in a truly Nigerian dining experience. Our welcoming atmosphere is perfect for family meals,friendly gatherings, or a romantic dinner.</p>
                             </div>
                         </div>
                     </div>
@@ -111,7 +111,9 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-truck text-primary mb-4"></i>
                                 <h5>Delivery</h5>
-                                <p class="service_paragraph">Savor the flavors of Nigerian Cuisines from the comfort of your own home with MamaBobo’s delivery service. We’ve partnered with <a href="https://mamabobo.co.uk/?serviceType=Pickup&utm_source=GoogleRedirect&utm_medium=organic&rwg_token=AJKvS9WDQEzg3d3PSJxr2oVfbPOf0tAx7orgvXtcpvimAZIwaTXSYw56QtqVqhoQ1eTdSZsN4Ix8xzfXB4P4oJklOa2DejWSdw%3D%3D" style="text-decoration: none;"><i>OrderYOYO</i></a>, <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" style="text-decoration: none;"><i>Just Eats</i></a> and <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" style="text-decoration: none;"><i>UberEats</i></a> to bring you your favourite dishes quickly and conveniently. Whether you're looking for a comforting meal at home or planning a feast with friends, our delivery service ensures that every order is packed with care and delivered right to your door.</p>
+                                <p class="service_paragraph">Savour the flavors of Nigerian Cuisines from the comfort of your own home with MamaBobo’s delivery service. We’ve partnered with 
+                                    <a href="https://www.just-eat.co.uk/restaurants-mama-bobo-africa-restaurant-ballynafoy/menu?serviceType=collection&utm_source=google&utm_medium=organic&utm_campaign=foodorder" style="text-decoration: none;"><i>Just Eats</i></a>, <a href="https://deliveroo.co.uk/menu/Belfast/ballynafeigh/mama-bobo-restaurant?geohash=gcey3r6m7vxq" style="text-decoration: none;"><i>Deliveroo</i></a>, and <a href="https://www.ubereats.com/gb/store/mama-bobo-restaurant/fBYs2Wk_XsKQX_xu53hhyw?diningMode=PICKUP&utm_campaign=place-action-link&utm_medium=organic&utm_source=google" style="text-decoration: none;"><i>UberEats</i></a> to bring you your favourite dishes quickly and conveniently.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -120,7 +122,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-utensils text-primary mb-4"></i> 
                                 <h5>Catering</h5>
-                                <p class="service_paragraph">At MamaBobo’s, we bring the unique flavors of Nigerian Cuisines directly to your event with our bespoke catering services. Whether you are hosting a wedding, a corporate event, or a birthday, we offer customized menus that cater to a variety of tastes and dietary needs. Our dedicated team ensures that each dish is as delightful and memorable as your special occasion. Contact us to discuss how we can tailor our offerings to your event’s needs and make your gathering truly exceptional.</p>
+                                <p class="service_paragraph">At MamaBobo’s, Whether you are hosting a wedding, a corporate event, or a birthday, we offer customized menus that cater to a variety of tastes and dietary needs.</p>
                             </div>
                         </div>
                     </div>
